chore: save current changes and refactor gps processing service